objects/Account.object
<CustomObject>
    <fields>
        <fullName>Haystak_Account_Number__c</fullName>
        <description>Holder field for future Acct Number</description>
        <label>Haystak Account Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Haystak_Account_Status__c</fullName>
        <label>Haystak Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Churned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OOB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Haystak_Customer_Created_Date__c</fullName>
        <label>Haystak Customer Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Haystak_Customer_Name__c</fullName>
        <label>Haystak Customer Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Haystak_Dealer_Id__c</fullName>
        <label>Haystak Dealer Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Haystak_Flair__c</fullName>
        <formula>CASE(  Haystak_Account_Status__c  , 
&quot;Customer&quot;, IMAGE(&quot;/resource/Flair_Logos/Hay_Customer.png&quot;, &quot;HAY Active&quot;), 
&quot;Churned&quot;, IMAGE(&quot;/resource/Flair_Logos/Haystak_former.png&quot;, &quot;HAY Former&quot;), 
&quot;Prospect&quot;,IMAGE(&quot;/resource/Flair_Logos/haystak_Prospect.png&quot;, &quot;HAY Prospect&quot;), 
&quot;HAY-unknown status&quot; 
)</formula>
        <label>Haystak Flair</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Haystak_Last_Touch_Date__c</fullName>
        <inlineHelpText>Updated manually by the sales rep.</inlineHelpText>
        <label>Haystak Last Touch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Haystak_Open_Opp__c</fullName>
        <inlineHelpText>Rollup field that shows the dollar amount of any open Haystak Opps (not stage = Deferred)</inlineHelpText>
        <label>Haystak Open Opp $</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Haystak DM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Deferred Opportunity</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Haystak_Product_Status__c</fullName>
        <description>Haystak</description>
        <label>Haystak Product Status</label>
        <picklist>
            <picklistValues>
                <fullName>SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO/SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM/Kore 360 Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO/Kore 360 Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM/SEO/Kore 360 Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Haystak_Spend__c</fullName>
        <label>Haystak Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Haystak_Status__c</fullName>
        <label>Haystak Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Churned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Haystak_Strategic_Account__c</fullName>
        <label>Haystak Strategic Account</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Haystak_UA_Code__c</fullName>
        <label>Haystak UA Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heat_Notes__c</fullName>
        <inlineHelpText>when an account is flagged for heat - heat notes must be entered to go into heat email</inlineHelpText>
        <label>Heat Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hello__c</fullName>
        <label>Hello</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hibernate_Start_Date__c</fullName>
        <inlineHelpText>The date that the customer entered Hibernation. Requires Hibernate Target End Date to be filled in as well.</inlineHelpText>
        <label>Hibernate Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hibernate_Target_End_Date__c</fullName>
        <inlineHelpText>The date that the customer is intending to end hibernation. When this date is passed, turn service back on and reset Customer Standing to its previous value.</inlineHelpText>
        <label>Hibernate Target End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hibernation_Notes__c</fullName>
        <inlineHelpText>Required notes field for setting the Customer Standing to Hibernation. Why are they going into hibernation?</inlineHelpText>
        <label>Hibernation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HomeNet_Flair__c</fullName>
        <description>Formula used to display flair image for BU as Active, Former, or Prospect.</description>
        <formula>IMAGE( 
CASE( HomeNet_Status__c , 
&quot;Active&quot;, &quot;/servlet/servlet.FileDownload?file=015Q0000000Pg4k&quot;, 
&quot;Former&quot;, &quot;/servlet/servlet.FileDownload?file=015Q0000000Pg4p&quot;, 
&quot;Prospect&quot;,&quot;/servlet/servlet.FileDownload?file=015Q0000000Pg4u&quot;, 
&quot;/s.gif&quot;), 
&quot;null&quot;)</formula>
        <label>HomeNet Flair</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeNet_Spend__c</fullName>
        <label>HomeNet Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HomeNet_Status__c</fullName>
        <label>HomeNet Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hosted_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ramana: 12/13/2014: Disabled this since we were getting errors on this field update:  FIELD_FILTER_VALIDATION_EXCEPTION, Value does not exist or does not match filter criteria.: [Hosted_by__c]: 
Confirmed with Maggie and disabled this.</description>
        <label>Hosted By</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <value>0017000000cPET0</value>
            </filterItems>
            <filterItems>
                <field>Contact.Business_Unit__c</field>
                <operation>equals</operation>
                <value>vAuto</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Hosted by)</relationshipLabel>
        <relationshipName>Accounts2_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>How_Many_Cars_Do_They_Sell__c</fullName>
        <label>How Many Cars Do They Sell?</label>
        <picklist>
            <picklistValues>
                <fullName>0-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>301-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ILM_Contract_End__c</fullName>
        <label>ILM Contract End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ILM__c</fullName>
        <inlineHelpText>Only Valid for Prospecting Accounts</inlineHelpText>
        <label>ILM (Prospecting ONLY)</label>
        <picklist>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoAccelerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBytel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Jockey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoRevo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVV - Web Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C.Q. Voices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Doone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Dealer Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Manager - Reynolds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer/Mate(div of Auto/Mate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Peak</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Implementation_Date__c</fullName>
        <inlineHelpText>last time the customer had a product implemented (CRM, ILM, DIY, Website) - equals the Confirmed Training Start Date</inlineHelpText>
        <label>Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Import_File_Id__c</fullName>
        <inlineHelpText>used for data imports</inlineHelpText>
        <label>Import File Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imported_Notes__c</fullName>
        <inlineHelpText>40k character limit</inlineHelpText>
        <label>Haystak Business Notes</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Increment__c</fullName>
        <description>Always should be 1. Used in reports for counting.</description>
        <formula>1</formula>
        <label>Increment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Integralink_Date1__c</fullName>
        <label>DMS Feed Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Integralink_Date__c</fullName>
        <formula>vAuto_POA__r.DMS_Feed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMS Feed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Count1__c</fullName>
        <description>Number of vehicles on the ground</description>
        <inlineHelpText>Number of vehicles on the ground</inlineHelpText>
        <label>Retail Inventory Count1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Count__c</fullName>
        <description>Account.Retail Inventory Count = Sum of Retail Used Inventory Count,New Inventory Count</description>
        <formula>vAuto_POA__r.Retail_Inventory_Count__c  +  vAuto_POA__r.New_Inventory_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of vehicles on the ground</inlineHelpText>
        <label>Retail Inventory Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Feed_Provider__c</fullName>
        <description>Haystak Field</description>
        <label>Inventory Feed Provider</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Gallery_Has_Been_Created_Notes__c</fullName>
        <label>Inventory Gallery Has Been Created Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inventory_Verification__c</fullName>
        <label>Inventory Verification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KBB_Activation_Date__c</fullName>
        <inlineHelpText>updated by the process builder when the asset active date is updated</inlineHelpText>
        <label>KBB PAR Used Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KBB_Flair__c</fullName>
        <formula>IMAGE( 
CASE( KBB_Status__c , 
&quot;Active&quot;, &quot;/servlet/servlet.FileDownload?file=015Q0000000Pg4z&quot;, 
&quot;Former&quot;, &quot;/servlet/servlet.FileDownload?file=015Q0000000Pg54&quot;, 
&quot;Prospect&quot;,&quot;/servlet/servlet.FileDownload?file=015Q0000000Pg59&quot;, 
&quot;/s.gif&quot;), 
&quot;null&quot;)</formula>
        <inlineHelpText>Formula used to display flair image for BU as Active, Former, or Prospect.</inlineHelpText>
        <label>KBB Flair</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KBB_PAR_New_Activation_Date__c</fullName>
        <label>KBB PAR New Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KBB_PAR_New_Termination_Date__c</fullName>
        <label>KBB PAR New Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KBB_PAR_New_Type__c</fullName>
        <label>KBB PAR New Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Churned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KBB_Spend__c</fullName>
        <label>KBB Spend - DELETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KBB_Status__c</fullName>
        <label>KBB PAR Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Churned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KBB_Termination_Date__c</fullName>
        <inlineHelpText>vAuto field</inlineHelpText>
        <label>KBB PAR Used Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KBB_Total_Product_Count__c</fullName>
        <description>Calculates the number of active KBB products from the BU Spend object.</description>
        <label>KBB Total Product Count</label>
        <summarizedField>BU_Spend__c.Product_Status_Value__c</summarizedField>
        <summaryFilterItems>
            <field>BU_Spend__c.Business_Unit__c</field>
            <operation>equals</operation>
            <value>KBB</value>
        </summaryFilterItems>
        <summaryForeignKey>BU_Spend__c.Dealer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KORE360tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ask Jason Wiley when this can be deleted. used to Track Dealer complaints regarding slow upgrade to KORE360 Platform</description>
        <inlineHelpText>DONT TOUCH. please.</inlineHelpText>
        <label>KORE360tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kelly_Spend__c</fullName>
        <description>From BU Spend object</description>
        <label>KBB Spend</label>
        <summarizedField>BU_Spend__c.Spend__c</summarizedField>
        <summaryFilterItems>
            <field>BU_Spend__c.Business_Unit__c</field>
            <operation>equals</operation>
            <value>KBB</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>BU_Spend__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Active, Delivered, Pending Cancellation, Pending Cancellation with Restriction</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>BU_Spend__c.Spend__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>BU_Spend__c.Dealer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Kenshoo_Profile__c</fullName>
        <description>Haystak</description>
        <label>Kenshoo Profile #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kenshoo_Server__c</fullName>
        <description>Haystak</description>
        <label>Kenshoo Server</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kenshoo_Tracking_ID__c</fullName>
        <label>Kenshoo Tracking ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>The most commonly spoken language at the dealership.</description>
        <inlineHelpText>The most commonly spoken language at the dealership.</inlineHelpText>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastLogin1__c</fullName>
        <label>LastLogin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastLogin__c</fullName>
        <formula>vAuto_POA__r.Last_Login__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastLogin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastPriceChange1__c</fullName>
        <label>LastPriceChange</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastPriceChange__c</fullName>
        <formula>vAuto_POA__r.Last_Price_Change__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastPriceChange</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Meeting_Date__c</fullName>
        <label>Last Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_by_MRM__c</fullName>
        <inlineHelpText>updated by Workflow whenever a MRM touches an account</inlineHelpText>
        <label>Last Modified by MRM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_by_Role__c</fullName>
        <formula>LastModifiedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>updated by the system</inlineHelpText>
        <label>Last Modified by Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_by_VinPro__c</fullName>
        <description>VinSolutions</description>
        <inlineHelpText>updated by the log solid engagement flow when a solid engagement is logged by a VinSolutions PM</inlineHelpText>
        <label>Last Touch by Vin PM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Update_by_SVOC__c</fullName>
        <description>This field is populated by the integration to SVOC when the last request to SVOC was processed.</description>
        <inlineHelpText>This field is populated by the integration to SVOC when the last request to SVOC was processed.</inlineHelpText>
        <label>Last Update by SVOC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_VIN_Training_Completed__c</fullName>
        <label>Last VIN Training Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Latitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Billing_Address_Same_as_Physical__c</fullName>
        <inlineHelpText>information populated from a lead conversion</inlineHelpText>
        <label>Lead Billing Address Same as Physical?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Billing_City__c</fullName>
        <inlineHelpText>populated from lead conversion</inlineHelpText>
        <label>Lead Billing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Billing_State__c</fullName>
        <inlineHelpText>populated from Lead conversion</inlineHelpText>
        <label>Lead Billing State</label>
        <picklist>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Billing_Zip__c</fullName>
        <inlineHelpText>populated from lead conversion</inlineHelpText>
        <label>Lead Billing Zip</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Providors__c</fullName>
        <label>Lead Providors</label>
        <picklist>
            <picklistValues>
                <fullName>Autobytel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoTrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autoweb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craigslist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ebay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Five Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM OneSource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jumpstart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keep it Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nissan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehix</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>2008 Top 125 Dealership Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAISP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoTrader.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD Orlando</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Dealer Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Mailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>infoUSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadlander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neglected Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar - Internal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <inlineHelpText>populated from lead conversion</inlineHelpText>
        <label>Lead Billing Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>Legacy ObjectID for Migration Purposes</description>
        <label>Legacy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limited_Users__c</fullName>
        <label>Limited Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LogicalId__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>the vAuto customer id from their provisioning application used to match and sync data from the app</inlineHelpText>
        <label>vAuto Logical Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LotVantage_Configured__c</fullName>
        <label>LotVantage Configured</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>